--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.26.0",
     "mongodb": "^3.4.0",
     "mongoose": "^5.8.1",
     "multer": "^1.4.2",
     "passport": "^0.4.1",
-    "passport-http-bearer": "^1.0.1"
+    "passport-http-bearer": "^1.0.1",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
